--- a/client/src/views/header/header.css
+++ b/client/src/views/header/header.css
@@ -362,6 +362,12 @@
     right: 10px;
     margin-top: 14px;
 }
+.header .invitation .list-online{
+	text-align: initial;
+	margin-top: 5px;
+	margin-left: 15px;
+	font-size: 13px;
+}
 .header .friends-online{
 	padding-bottom: 15px;
 }
@@ -397,6 +403,7 @@
 	height: 40px;
 	align-self: center;
 	margin-right: 7px;
+	border-radius: 50%;
 }
 .header .list-online strong span{
 	align-self: center;
